--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "kris/laravel-form-builder": "1.*",
         "laravel/framework": "5.8.*",
         "laravel/tinker": "^1.0",
+        "zachflower/eloquent-interactions": "^0.2.0"
     },
     "require-dev": {
         "beyondcode/laravel-dump-server": "^1.0",
